# easy_config

./: CMakeLists.txt  README.md
include/: arithmetic_type.hpp  interpreter.hpp  lexer.hpp  token_info.hpp
src/: compiler.cpp
tests/: CMakeLists.txt  compiler_test.cpp  interpreter_test.cpp  lexer_test.cpp  lexis_sample.txt  pod_struct.h  pod_struct.txt  test_struct.h
